--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,4 +20,11 @@ const currentYear = new Date().getFullYear();
     >
     All Rights Reserved<br />
   </div>
+  <!-- Cloudflare Web Analytics -->
+  <script
+    is:inline
+    defer
+    src="https://static.cloudflareinsights.com/beacon.min.js"
+    data-cf-beacon='{"token": "a57491f6511b498683b86c6910055bf0"}'
+  ></script><!-- End Cloudflare Web Analytics -->
 </div>
